--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cosplay",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "Command line interface for github package development",
   "bin": {
     "cosplay": "dist/cli.js"
@@ -9,6 +9,7 @@
     "dev": "rm -rf dist/templates && cp -r src/templates dist && tsc --watch",
     "build": "rm -rf dist/templates && cp -r src/templates dist && tsc",
     "local": "npm install -g",
+    "prepublish": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint '*/**/*.{js,ts,tsx}' --fix",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0"
