--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "bin": "dist/cli.js",
   "files": [
     "dist",
-    "types"
+    "types",
+    "templates"
   ],
   "scripts": {
-    "dev": "rm -rf dist/templates && cp -r src/templates dist && tsc --watch",
-    "build": "rm -rf dist/templates && cp -r src/templates dist && tsc",
+    "dev": "tsc --watch",
+    "build": "tsc",
     "local": "npm install -g",
     "prepublish": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
