--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@commitlint/config-conventional": "^11.0.0",
     "@types/clui": "^0.3.0",
     "@types/configstore": "^4.0.0",
+    "@types/figlet": "^1.2.1",
     "@types/inquirer": "^7.3.1",
     "@types/node": "^14.14.7",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
