--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "dev": "tsc --watch",
     "build": "tsc",
     "local": "npm install -g",
-    "prepublish": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint '*/**/*.{js,ts,tsx}' --fix",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0"
@@ -43,8 +42,10 @@
     "@octokit/rest": "^18.0.9",
     "chalk": "^4.1.0",
     "configstore": "^5.0.1",
+    "ejs": "^3.1.5",
     "execa": "^4.1.0",
     "figlet": "^1.5.0",
+    "fs-extra": "^9.0.1",
     "inquirer": "^7.3.3",
     "leven": "^3.1.0",
     "listr2": "^3.2.2",
@@ -58,7 +59,9 @@
     "@commitlint/config-conventional": "^11.0.0",
     "@types/clui": "^0.3.0",
     "@types/configstore": "^4.0.0",
+    "@types/ejs": "^3.0.5",
     "@types/figlet": "^1.2.1",
+    "@types/fs-extra": "^9.0.4",
     "@types/inquirer": "^7.3.1",
     "@types/node": "^14.14.7",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
