fix(create): fix write bug

--- a/templates/default/package.json
+++ b/templates/default/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cosplay",
+  "name": "<%= projectName %>",
   "version": "1.0.0",
   "description": "Command line interface for github package development",
   "bin": {
