--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "homepage": "https://github.com/sishenhei7/cosplay#readme",
   "dependencies": {
     "@octokit/rest": "^18.0.9",
+    "axios": "^0.21.1",
     "chalk": "^4.1.0",
     "configstore": "^5.0.1",
     "ejs": "^3.1.5",
@@ -54,6 +55,7 @@
     "minimist": "^1.2.5",
     "ora": "^5.1.0",
     "puppeteer-core": "^9.0.0",
+    "source-map": "^0.7.3",
     "touch": "^3.1.0",
     "tsup": "^4.9.1"
   },
