--- a/templates/default/.editorconfig
+++ b/templates/default/.editorconfig
@@ -1,12 +1,16 @@
+# top-most EditorConfig file
 root = true
 
+# Unix-style newlines with a newline ending every file
 [*]
-indent_style = space
-indent_size = 2
 end_of_line = lf
-charset = utf-8
-trim_trailing_whitespace = true
 insert_final_newline = true
+
+# Indentation override for all JS under lib directory
+indent_size = 2
+charset = utf-8
+indent_style = space
+trim_trailing_whitespace = true
 
 [*.md]
 trim_trailing_whitespace = false
